--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "ng2-search-filter": "^0.5.1",
     "ngx-skeleton-loader": "^2.10.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
